--- a/Events/TabBarController/TableCell.xib
+++ b/Events/TabBarController/TableCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="201" id="elP-pa-sEk">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" rowHeight="201" id="elP-pa-sEk" customClass="ProgramCustomCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="elP-pa-sEk" id="06g-g7-osl">
@@ -36,8 +36,8 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MAIN EVENT" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypd-Ht-Awb">
-                        <rect key="frame" x="0.0" y="108" width="362" height="36"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypd-Ht-Awb">
+                        <rect key="frame" x="0.0" y="108" width="320" height="36"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -58,7 +58,13 @@
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="110" y="39"/>
+            <connections>
+                <outlet property="imgEventImage" destination="VL7-KG-7Zl" id="rdr-FD-dSv"/>
+                <outlet property="lblDateTime" destination="Vll-Oq-SLb" id="lXo-Z9-Oaf"/>
+                <outlet property="lblEventDesc" destination="gRx-RX-VX8" id="GZ0-nI-XiQ"/>
+                <outlet property="lblEventName" destination="Ypd-Ht-Awb" id="bjK-xE-Oc4"/>
+            </connections>
+            <point key="canvasLocation" x="102" y="31"/>
         </tableViewCell>
     </objects>
     <resources>
