--- a/Events/TabBarController/TableCell.xib
+++ b/Events/TabBarController/TableCell.xib
@@ -27,6 +27,10 @@
                         <rect key="frame" x="0.0" y="-73" width="320" height="173"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </imageView>
+                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" fixedFrame="YES" image="imagelayover.png" translatesAutoresizingMaskIntoConstraints="NO" id="d1d-4S-X6w">
+                        <rect key="frame" x="0.0" y="108" width="320" height="54"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description about Event!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRx-RX-VX8">
                         <rect key="frame" x="0.0" y="124" width="320" height="46"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -41,7 +45,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                        <color key="textColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.92941188812255859" green="0.10980373620986938" blue="0.14117646217346191" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tue, Mar 20 2017 12:00 AM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vll-Oq-SLb">
@@ -52,11 +56,8 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" fixedFrame="YES" image="imagelayover.png" translatesAutoresizingMaskIntoConstraints="NO" id="d1d-4S-X6w">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </imageView>
                 </subviews>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgEventImage" destination="VL7-KG-7Zl" id="rdr-FD-dSv"/>
